syntax = "proto3";

import "commons.proto";

package authentication;

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message AccessTokenResponse {
  string accessToken = 1;
}

message LogoutResponse {
  string message = 1;
}

message GenerateAccessTokenRequest {
  string clientId = 1;
  string client_secret = 2;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GenerateAccessToken(GenerateAccessTokenRequest) returns (AccessTokenResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (AccessTokenResponse);
  rpc Logout(commons.AuthUserInstance) returns (LogoutResponse);
}
