syntax = "proto3";

package commons;

message NetworkInstance {
  string id = 1;
  string name = 2;
  optional string description = 3;
  string symbol = 4;
  bool isActive = 5;
  repeated NetworkAssetInstance assets = 6;
}

message NetworkAssetInstance {
  message ABIInstance {
    message Input {
      string name = 1;
      string type = 2;
      bool indexed = 3; // Solo cuando es usado en eventos
    }
  
    message Output {
      string name = 1; // Opcional, puede no ser utilizado
      string type = 2;
    }
  
    message EventInput {
      bool indexed = 1;
      string name = 2;
      string type = 3;
    }
    
    bool constant = 1;
    string name = 2;
    repeated Input inputs = 3;
    repeated Output outputs = 4;
    string stateMutability = 5;
    optional bool payable = 6;
    string type = 7;
    repeated EventInput eventInputs = 8;
    optional bool anonymous = 9;
  }

  string name = 1;
  string symbol = 2;
  string contractAddress = 3;
  repeated ABIInstance abi = 4;
}

message MnemonicPhraseInstance {
  string id = 1;
  string userId = 2;
  optional string mnemonicPhrase = 3;
  string createdAt = 4;
  string updatedAt = 5;
}

message WalletInstance {
  string id = 1;
  string address = 2;
  optional NetworkInstance network = 3;
}

message AuthUserInstance {
  string id = 1;
  string username = 2;
  string email = 3;
  repeated string roles = 4;
  repeated WalletInstance wallets = 5;
  string emailVerifiedAt = 6;
  string scope = 7;
}

message UserInstance {
  string id = 1;
  string username = 2;
  string email = 3;
  repeated string roles = 4;
  bool isActive = 5;
  repeated commons.WalletInstance wallets = 6;
  string emailVerifiedAt = 7;
  string createdAt = 8;
  string updatedAt = 9;
}

message GeneralMessageResponse {
  string message = 1;
}

message BalanceInstance {
  string userId = 1;
  string address = 2;
  string networkId = 3;
  string networkSymbol = 4;
  string token = 5;
  string balance = 6;
  string decimals = 7;
  string rawBalance = 8;
}

message AccountsInstance {
  message AddressInstance {
    optional string city = 1;
    optional string country = 2;
    optional string postalCode = 3;
    optional string state = 4;
    optional string streetLine1 = 5;
    optional string streetLine2 = 6;
  }

  string id = 1;
  string bitsoAccountId = 2;
  string userId = 3;
  string accountNumber = 4;
  string accountOwnerName = 5;
  optional AddressInstance address = 6;
  string bankName = 7;
  string routingNumber = 8;
  optional string last4 = 9;
  bool isActive = 10;
  optional string createdAt = 11;
  optional string updatedAt = 12;
}

message BitsoBankAccountInstance {
  string id  =1;
  string bankName = 2;
  string last4 = 3;
  string accountOwnerName = 4;
}

message WithdrawalIntance {
  message User {
    string id = 1;
    string username = 2;
    string email = 3;
    repeated string roles = 4;
  }

  message BitsoRequest {
    string amount = 1;
    string asset = 2;
    string currency = 3;
    string externalAccountId = 4;
    string method = 5;
    string network = 6;
    string originId = 7;
    string protocol = 8;
    string onBehalfOfCustomerId = 9;
    optional string wireMessage = 10;
  }

  message BitsoResponse {
    message Details {
      optional string originId = 1;
    }
    
    optional string wid = 1;
    optional string status = 2;
    optional string created_at = 3;
    optional string currency = 4;
    optional string method = 5;
    optional string method_name = 6;
    optional string amount = 7;
    optional string asset = 8;
    optional string network = 9;
    optional string protocol = 10;
    optional string integration = 11;
    optional Details details = 12;
  }

  message ReceivingAccount {
    string id = 1;
    optional string userId = 2;
    optional string bitsoAccountId = 3;
    optional string bankName = 4;
    optional string last4 = 5;
    optional string accountOwnerName = 6;
  }
  
  optional string id = 1;
  int32 sequentialId = 2;
  string bitsoId = 3;
  optional User user = 4;
  optional BitsoRequest bitsoRequest = 5;
  optional BitsoResponse bitsoResponse = 6;
  optional string status = 7;
  optional ReceivingAccount receivingAccount = 8;
  optional string currency = 9;
  optional string method = 10;
  optional string protocol = 11;
  optional string amount = 12;
  optional string fee = 13;
  optional string total = 14;
  optional string createdAt = 15;
  optional string updatedAt = 16;
}